--- a/block.html
+++ b/block.html
@@ -26,7 +26,7 @@ var smBlock=0;//box中的所有可行走的盒子
 var LaR=0;//记录当前方块左还是右移了多少格
 var lineN=28;//一行有多少个格子
 var boom=0;//记录是否已经到底
-var BlockArry=[];//通过记录它们每一格在行中的位置来记录七种不同形状的方块，在创造背景函数中创建
+var BlockArry=[];//通过记录它们每一格在行中的位置来记录七种不同形状的方块，在创造背景函数中创建不同形状的方块
 
 
 
